[gd_scene load_steps=8 format=3 uid="uid://bemsvf804ccso"]

[ext_resource type="Script" path="res://scripts/menu_ajustes.gd" id="1_pyaad"]
[ext_resource type="Texture2D" uid="uid://gkqgcn4smclo" path="res://imagenes/imagen_menu_generica.jpg" id="2_u8ejy"]
[ext_resource type="Texture2D" uid="uid://b8uckmmd64v35" path="res://imagenes/Flecha_retorno.png" id="3_3rslc"]

[sub_resource type="CanvasTexture" id="CanvasTexture_82bh4"]

[sub_resource type="LabelSettings" id="LabelSettings_05uda"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_lt5nu"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_uiblw"]
font_size = 20

[node name="menu_ajustes" type="Node2D"]
script = ExtResource("1_pyaad")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ImagenFondo" type="TextureRect" parent="UI"]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_u8ejy")
expand_mode = 1

[node name="CuadradoGris" type="TextureRect" parent="UI"]
modulate = Color(0.286275, 0.286275, 0.286275, 0.670588)
offset_left = 451.0
offset_top = 183.0
offset_right = 703.0
offset_bottom = 426.0
texture = SubResource("CanvasTexture_82bh4")

[node name="VContenedor" type="VBoxContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -280.0
offset_right = 108.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 50

[node name="EtiquetaAjustes" type="Label" parent="UI/VContenedor"]
layout_mode = 2
text = "AJUSTES


"
label_settings = SubResource("LabelSettings_05uda")
horizontal_alignment = 1

[node name="ContenedorMusica" type="VBoxContainer" parent="UI/VContenedor"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="EtiquetaMusica" type="Label" parent="UI/VContenedor/ContenedorMusica"]
layout_mode = 2
text = "Música:"
label_settings = SubResource("LabelSettings_lt5nu")

[node name="ContenedorAjustesMusica" type="HBoxContainer" parent="UI/VContenedor/ContenedorMusica"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="ContendorEtiquetasMusica" type="VBoxContainer" parent="UI/VContenedor/ContenedorMusica/ContenedorAjustesMusica"]
layout_mode = 2

[node name="Master" type="Label" parent="UI/VContenedor/ContenedorMusica/ContenedorAjustesMusica/ContendorEtiquetasMusica"]
layout_mode = 2
text = "    General"

[node name="Musica" type="Label" parent="UI/VContenedor/ContenedorMusica/ContenedorAjustesMusica/ContendorEtiquetasMusica"]
layout_mode = 2
text = "    Música"

[node name="SFX" type="Label" parent="UI/VContenedor/ContenedorMusica/ContenedorAjustesMusica/ContendorEtiquetasMusica"]
layout_mode = 2
text = "    Efectos"

[node name="ContenedorSliders" type="VBoxContainer" parent="UI/VContenedor/ContenedorMusica/ContenedorAjustesMusica"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Master" type="HSlider" parent="UI/VContenedor/ContenedorMusica/ContenedorAjustesMusica/ContenedorSliders"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05

[node name="Musica" type="HSlider" parent="UI/VContenedor/ContenedorMusica/ContenedorAjustesMusica/ContenedorSliders"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05

[node name="SFX" type="HSlider" parent="UI/VContenedor/ContenedorMusica/ContenedorAjustesMusica/ContenedorSliders"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05

[node name="ContendeorDificultad" type="HBoxContainer" parent="UI/VContenedor"]
layout_mode = 2
theme_override_constants/separation = 26

[node name="EtiquetaDificultad" type="Label" parent="UI/VContenedor/ContendeorDificultad"]
layout_mode = 2
text = "Dificultad:"
label_settings = SubResource("LabelSettings_uiblw")

[node name="OptionsButtonDificultad" type="OptionButton" parent="UI/VContenedor/ContendeorDificultad"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "Fácil"
popup/item_1/text = "Normal"
popup/item_1/id = 1
popup/item_2/text = "Difícil"
popup/item_2/id = 2

[node name="BotonVolver" type="Button" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -113.0
offset_right = 120.0
offset_bottom = -15.0
grow_vertical = 0
icon = ExtResource("3_3rslc")
flat = true
expand_icon = true

[connection signal="value_changed" from="UI/VContenedor/ContenedorMusica/ContenedorAjustesMusica/ContenedorSliders/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="UI/VContenedor/ContenedorMusica/ContenedorAjustesMusica/ContenedorSliders/Musica" to="." method="_on_musica_value_changed"]
[connection signal="value_changed" from="UI/VContenedor/ContenedorMusica/ContenedorAjustesMusica/ContenedorSliders/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="item_selected" from="UI/VContenedor/ContendeorDificultad/OptionsButtonDificultad" to="." method="_on_options_button_dificultad_item_selected"]
[connection signal="pressed" from="UI/BotonVolver" to="." method="_on_boton_volver_pressed"]
